@@ -6,11 +6,12 @@
 #include <definitions/rosterlabelorders.h>
 #include <definitions/rosterindextyperole.h>
 #include <definitions/rosternotifyorders.h>
+#include <definitions/rosteredithandlerorders.h>
+#include <definitions/rosterdragdropmimetypes.h>
 #include <definitions/multiuserdataroles.h>
 #include <definitions/notificationtypes.h>
 #include <definitions/notificationdataroles.h>
 #include <definitions/notificationtypeorders.h>
-#include <definitions/rosterdragdropmimetypes.h>
 #include <definitions/optionvalues.h>
 #include <definitions/optionnodes.h>
 #include <definitions/optionwidgetorders.h>
@@ -50,10 +51,11 @@ class RosterChanger :
 			public IRosterChanger,
 			public IOptionsHolder,
 			public IRostersDragDropHandler,
+			public IRostersEditHandler,
 			public IXmppUriHandler
 {
 	Q_OBJECT;
-	Q_INTERFACES(IPlugin IRosterChanger IOptionsHolder IRostersDragDropHandler IXmppUriHandler);
+	Q_INTERFACES(IPlugin IRosterChanger IOptionsHolder IRostersDragDropHandler IRostersEditHandler IXmppUriHandler);
 public:
 	RosterChanger();
 	~RosterChanger();
@@ -73,6 +75,12 @@ public:
 	virtual bool rosterDragMove(const QDragMoveEvent *AEvent, const QModelIndex &AHover);
 	virtual void rosterDragLeave(const QDragLeaveEvent *AEvent);
 	virtual bool rosterDropAction(const QDropEvent *AEvent, const QModelIndex &AIndex, Menu *AMenu);
+	//IRostersEditHandler
+	virtual bool rosterEditStart(int ADataRole, const QModelIndex &AIndex) const;
+	virtual QWidget *rosterEditEditor(int ADataRole, QWidget *AParent, const QStyleOptionViewItem &AOption, const QModelIndex &AIndex) const;
+	virtual void rosterEditLoadData(int ADataRole, QWidget *AEditor, const QModelIndex &AIndex) const;
+	virtual void rosterEditSaveData(int ADataRole, QWidget *AEditor, const QModelIndex &AIndex) const;
+	virtual void rosterEditGeometry(int ADataRole, QWidget *AEditor, const QStyleOptionViewItem &AOption, const QModelIndex &AIndex) const;
 	//IXmppUriHandler
 	virtual bool xmppUriOpen(const Jid &AStreamJid, const Jid &AContactJid, const QString &AAction, const QMultiMap<QString, QString> &AParams);
 	//IRosterChanger
